src/ui/radarr_ui/system/snapshots/managarr__ui__radarr_ui__system__system_details_ui__system_details_ui_tests__tests__snapshot_tests__system_details_ui_renders_queued_events_loading.snap
---
source: src/ui/radarr_ui/system/system_details_ui_tests.rs
expression: output
---
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                 ╭  Queued Events  ────────────────────────────────────────────────────────────────────────────────╮                                 
                                 │                                                                                                 │                                 
                                 │                                                                                                 │                                 
                                 │ Loading ...                                                                                     │                                 
                                 │                                                                                                 │                                 
                                 │                                                                                                 │                                 
                                 │                                                                                                 │                                 
                                 │                                                                                                 │                                 
                                 │                                                                                                 │                                 
                                 │                                                                                                 │                                 
                                 │                                                                                                 │                                 
                                 │                                                                                                 │                                 
                                 │                                                                                                 │                                 
                                 │                                                                                                 │                                 
                                 │                                                                                                 │                                 
                                 │                                                                                                 │                                 
                                 │                                                                                                 │                                 
                                 │                                                                                                 │                                 
                                 │                                                                                                 │                                 
                                 │                                                                                                 │                                 
                                 │                                                                                                 │                                 
                                 │                                                                                                 │                                 
                                 │                                                                                                 │                                 
                                 │                                                                                                 │                                 
                                 │                                                                                                 │                                 
                                 │                                                                                                 │                                 
                                 │                                                                                                 │                                 
                                 │                                                                                                 │                                 
                                 │                                                                                                 │                                 
                                 ╰─────────────────────────────────────────────────────────────────────────────────────────────────╯
